# abcli

./: .gitignore  .gitlab-ci.yml  .pylintrc  Pipfile  README.md  config-sqlite.json  pyproject.toml
abcli/: __main__.py  main.py  model.py  utils.py
abcli/commands/: __init__.py  account.py  balance.py  budget.py  transaction.py
abcli/commands/csv/: __init__.py  classify.py  csv2json.py  prep.py  utils.py
abcli/commands/test/: test_account.py  test_budget.py  test_model_orm.py  test_transaction.py
abcli/test/: __init__.py  common.py  test_account.py  test_budget.py  test_model_orm.py
abcli/utils/: __init__.py  click.py  model.py
abcli/utils/test/: test_model.py
accbook/: classify.py  common.py  csv2json.py
accbook/cli/: __init__.py  main.py  model.py
accbook/cli/commands/: __init__.py  account.py  accounts.py  balance.py  budget.py  transaction.py  transactions.py
accbook/cli/core/: model.py
accbook/cli/test/: common.py  test_account.py  test_accounts.py  test_budget.py  test_model_orm.py
