[tool.poetry]
name = "abcli"
version = "0.8.0"
description = "A CLI tool for transaction tracking and budgeting"
authors = ["John Zhang <john.u5f35@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.42.0"
pyyaml = "^5.3"
coloredlogs = "^10.0"
pony = "^0.7.11"
treelib = "^1.5.5"
click = "^7.0"
tabulate = "^0.8.6"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.3.5"

[tool.poetry.scripts]
abcli="abcli.main:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
